refactor: Increased performance. refactor: Fix error in Blur image renderer.

--- a/SSFR_Movies/SSFR_Movies/Views/About.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/About.xaml
@@ -3,16 +3,15 @@
     x:Class="SSFR_Movies.Views.About"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     Title="SSFR Movies"
     BackgroundColor="#161513">
     <ContentPage.Content>
         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" CompressedLayout.IsHeadless="True">
             <ScrollView VerticalOptions="FillAndExpand">
                 <StackLayout HorizontalOptions="Center" VerticalOptions="FillAndExpand">
-                    <ffimage:CachedImage
+                    <Image
                         HeightRequest="250"
-                        DownsampleToViewSize="True"
+                        Aspect="AspectFill"
                         HorizontalOptions="Center"
                         Source="icon.png"
                         WidthRequest="250" />
