--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -38,9 +38,10 @@
                         Grid.Column="0"
                         Margin="0,15,0,0"
                         HeightRequest="40"
+                        BackgroundColor="#44000000"
                         HorizontalScrollBarVisibility="Never">
 
-                        <FlexLayout Direction="Row" BindableLayout.ItemsSource="{Binding GenreList.Value}">
+                        <FlexLayout BackgroundColor="Transparent" Direction="Row" BindableLayout.ItemsSource="{Binding GenreList.Value}">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
                                     <Frame Style="{StaticResource FramesStyle}">
@@ -55,213 +56,8 @@
                                     </Frame>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
-                           
-                            <!--<Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Adventure">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Animation">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Comedy">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Crime">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Documentary">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Drama">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Family">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="History">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Horror">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Music">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Mystery">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Romance">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Science Fiction">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="TV Movie">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Thriller">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="War">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>
-                            <Frame Style="{StaticResource FramesStyle}">
-
-                                <Label
-                                    FontAttributes="Bold"
-                                    Style="{StaticResource LabelsStyle}"
-                                    Text="Western">
-                                    <Label.GestureRecognizers>
-                                        <TapGestureRecognizer Tapped="Genre_Tapped" />
-                                    </Label.GestureRecognizers>
-                                </Label>
-
-                            </Frame>-->
-
                         </FlexLayout>
-
+                        
                     </ScrollView>
                 </Grid>
             </FlexLayout>
